# python_withings_api

./: .codespell-ignore  .gitignore  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.md  README.rst  client.py  pylintrc  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  tox.ini  withings.py
.github/workflows/: build.yml  publish.yml  python-package.yml  python-publish.yml
nokia/: __init__.py
requirements/: base.txt  test.txt
scripts/: build.sh  build_and_publish.sh  ci-build.sh  ci-install.sh  clean.sh  common.sh  integration_test.py  scanwatch_test.py  update_deps.sh
tests/: __init__.py  common.py  test_common.py  test_init.py  test_nokia_activity.py  test_nokia_api.py  test_nokia_auth.py  test_nokia_credentials.py  test_nokia_measure_group.py  test_nokia_measures.py  test_nokia_object.py  test_nokia_sleep.py  test_nokia_sleep_series.py  test_nokia_sleep_summary.py  test_nokia_sleep_summary_series.py  test_withings_activity.py  test_withings_api.py  test_withings_auth.py  test_withings_credentials.py  test_withings_measure_group.py  test_withings_measures.py  test_withings_object.py  test_withings_sleep.py  test_withings_sleep_series.py  test_withings_sleep_summary.py  test_withings_sleep_summary_series.py
withings/: __init__.py
withings_api/: __init__.py  common.py  const.py
